# Siatec-Egresos

./: .editorconfig  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.codex/: AGENTS.md  agent-context.md
.codex/prompts/: create-module.md  create-package.md  create-task.md
.codex/rules/: api.md  database.md  errors.md  frontend.md  rust.md  security.md
.codex/tasks/: README.md  backlog.md  current-task.md
.codex/tasks/done/: .gitkeep  20260310-baseline-tecnica.md  20260310-ci-minima.md  20260310-desktop-scaffold.md  20260310-entorno-desarrollo.md  20260310-logger-scaffold.md  20260310-observability-testing.md  20260310-packages-foundation.md  20260310-services-core.md  20260310-services-remaining.md  20260310-ui-scaffold.md  20260310-web-scaffold.md  20260311-auth-device-gate-lucca466.md  20260311-auth-login-desktop-mvp.md  20260311-control-usuarios-acciones-operativas.md  20260311-control-usuarios-crud-mvp-desktop.md  20260311-desktop-tauri-runtime.md  20260311-sidebar-runtime-lucca410.md  20260311-test-pages-desktop-web.md  20260311-usuarios-catalogo-dashboard-shell.md  20260311-workspace-runtime-validation.md
.codex/templates/: handoff.md  task.md
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  next.config.js  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/web/: next.config.js  package.json  tsconfig.json
docs/: README.md  RUNBOOK_LOCAL_DEV.md
docs/adr/: 001-tauri-over-electron.md  002-logical-deletion.md  003-module-isolation.md  004-monorepo-structure.md  005-branding-system.md  006-branching-and-collaboration.md  007-multi-agent-task-coordination.md  008-architectural-boundary-enforcement.md  009-ci-quality-gates.md  010-reuse-and-anti-spaghetti.md  011-runtime-verification-for-runnable-channels.md
docs/architecture/: api-contracts.md  branding.md  c1-context.md  c2-containers.md  c3-components.md  c4-domain.md
docs/mvp/solicitudes/: README.md  (+6 more)
docs/windev/: architecture_summary.md  manifest.json
modules/egresos/: Cargo.toml
services/api/: .env.example  Cargo.toml  README.md  package.json
services/api/src/: app.rs  auth.rs  config.rs  error.rs  http.rs  main.rs  openapi.rs  state.rs  telemetry.rs
services/api/src/routes/: auth.rs  db.rs  egresos.rs  health.rs  mod.rs  solicitudes.rs  users.rs  version.rs
tools/: validate-structure.mjs
(+214 files in other folders)
