[package]
name = "siatec-egresos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }

# Domain modules
siatec-egresos-egresos = { path = "../../modules/egresos" }
