[package]
name = "siatec-egresos-desktop"
version = "0.0.0"
description = "Siatec Egresos Desktop"
authors = ["Siatec"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]
